syntax = "proto3";

package topic;

import "topic/topic.proto";

service TopicApi {
  rpc ListTopics(ListTopicsRequest) returns (ListTopicsResponse);
  rpc GetTopic(GetTopicRequest) returns (GetTopicResponse);
}

message ListTopicsRequest {
  int32 page = 1;
  topic.Tab tab = 2;
  int32 limit = 3;
  topic.Mdrender mdrender = 4;
}

message ListTopicsResponse {
  repeated topic.Topic data = 1;
  bool success = 2;
}

message GetTopicRequest { string id = 1; }

message GetTopicResponse {
  topic.Topic data = 1;
  bool success = 2;
}